# xinyiclaw2

./: .env.example  .gitignore  README.md  benchmark.py  benchmark_h2a.py  benchmark_vs_claude.py  demo_realtime.py  pyproject.toml  test_debug.py  test_fair.py  test_metrics.py  test_unique.py  启动XinyiClaw Web.bat
src/: web_app.py
src/templates/: index.html
src/xinyiclaw/: __main__.py  agent.py  agent_core.py  bot.py  config.py  conversations.py  db.py  engine.py  memory.py  pipeline_agent.py  scheduler.py
